fix alignment of images

--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,36 @@
 .center {
   text-align: center;
 }
- img {
-   height: 200px;
-   width: 200px;
-   padding: 20px;
-   margin: 30px;
-   border: 5px solid rgb(89, 197, 247);
-   border-radius: 180px;
-   text-align:center;
-   display:inline-block;
- }
+img {
+  height: 200px;
+  width: 200px;
+  padding: 10px;
+  margin: 30px;
+  border: 5px solid rgb(146, 185, 236);
+  border-radius: 180px;
+  text-align: center;
+  display: inline-block;
+}
 
- button {
-  background-color: #e7e7e7; color:black
+button {
+  background-color: #e7e7e7; color:black;
   padding: 20px 32px;
   font-size: 16px;
   text-align: center;
-  display: inline-block;
-  margin: 10px
- }
+  margin-left: 10%;
+}
+
+.scores {
+  margin: auto;
+  color: black;
+  border: 5px solid rgb(146, 185, 236);
+  text-align: center;
+  width: 40%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 300;
+  background-color: rgb(230, 230, 230);
+}
+
+p {
+  text-align: center;
+}
